@@ -1,3 +1,8 @@
+* Dec 29 2000 hship
+
+Change the hangman tutorial to propertly specify the Visit class in the application
+specification.
+
 * Dec 28 2000 hship
 
 Change Hangman tutorial due to changes in RadioGroup and Radio components.
